Implement api for saving a new prospect

--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -123,18 +123,18 @@
                 <h6>Interested fields</h6>
                 <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="backend">
                     <input type="checkbox" id="backend" class="mdl-checkbox__input"
-                           name="{{prospect.interestedFields}}" value="backend">
+                           name="{{prospect.interestedFields}}" value="Backend Developer">
                     <span class="mdl-checkbox__label">Backend Developer</span>
                 </label>
                 <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="frontend">
                     <input type="checkbox" id="frontend" class="mdl-checkbox__input"
-                           name="{{prospect.interestedFields}}" value="frontend">
+                           name="{{prospect.interestedFields}}" value="Frontend Developer">
                     <span class="mdl-checkbox__label">Frontend Developer</span>
                 </label>
                 <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="tester">
                     <input type="checkbox" id="tester" class="mdl-checkbox__input"
-                           name="{{prospect.interestedFields}}" value="tester">
-                    <span class="mdl-checkbox__label">Tester</span>
+                           name="{{prospect.interestedFields}}" value="Software Tester">
+                    <span class="mdl-checkbox__label">Software Tester</span>
                 </label>
                 <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="other">
                     <input type="checkbox" id="other" class="mdl-checkbox__input"
