--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -50,9 +50,10 @@
                 <div class="demo-container mdl-grid">
                     <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
                     <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-                        <br class="demo-crumbs mdl-color-text--grey-500"/>
-                        <h3>Majoingun</h3>
-                        <div id="registerform"></div>
+                        <div class="demo-crumbs mdl-color-text--grey-500">
+                            <h3>Majoingun</h3>
+                            <div id="registerform"></div>
+                        </div>
                     </div>
                 </div>
                 <footer class="demo-footer mdl-mini-footer">
