--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="/majoingun/css/styles.css">
     <link rel="stylesheet" href="/majoingun/css/material.min.css">
     <link rel="stylesheet" href="/majoingun/css/majoingun.css">
+    <link rel="stylesheet" href="/majoingun/css/sweetalert.css">
 </head>
 
 <body>
@@ -171,6 +172,7 @@
     <script src='/majoingun/js/ractive.min.js'></script>
     <script src="/majoingun/register/main.js"></script>
     <script src='/majoingun/js/material.min.js'></script>
+    <script src='/majoingun/js/sweetalert.min.js'></script>
 
 </body>
 </html>
