Implement new footer

--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -66,28 +66,19 @@
                     <!--</div>-->
                 <!--</footer>-->
                 <footer class="mdl-mega-footer">
-                    <div class="mdl-mega-footer__middle-section">
-                        <div class="mdl-grid">
-                            <div class="mdl-cell mdl-cell--6-col">
-                                <h1 class="mdl-mega-footer__heading">Find us at</h1>
-                                Unit 1101, 1104, 11th Floor
-                                Exchange Tower
-                                388 Sukhumvit Road, Klongtoey,
-                                Bangkok 10110, Thailand.
-                            </div>
-                            <div class="mdl-cell mdl-cell--6-col">
-                                <h1 class="mdl-mega-footer__heading">Contact</h1>
-                                Phone : +66 (0) 2663 4340
-                                Fax : +66 (0) 2663 4339
-                                E-mail : contact@abctech-thailand.com
-                            </div>
-                        </div>
-                    </div>
-
                     <div class="mdl-mega-footer__bottom-section" style="text-align: center">
-                        Copyright ABCTECH 2015. All Rights Reserve
+                        <p> Unit 1101, 1104, 11th Floor
+                            Exchange Tower 388 Sukhumvit Road, Klongtoey,
+                            Bangkok 10110, Thailand.
+                        </p>
+                        <p> Phone : +66 (0) 2663 4340
+                            Fax : +66 (0) 2663 4339
+                            E-mail : contact@abctech-thailand.com
+                        </p>
+                        <p>
+                            Copyright ABCTECH 2015. All Rights Reserve
+                        </p>
                     </div>
-
                 </footer>
             </main>
         </div>
