Create register form

--- a/src/main/resources/public/prospect/prospect.html
+++ b/src/main/resources/public/prospect/prospect.html
@@ -70,13 +70,14 @@
 
 <script id='template' type='text/html'>
 
-    <!--List all prospect here-->
+    <datatable data='{{data}}' filter='{{filter}}' perpage='{{perpage}}' page='{{page}}' selectionMode='row'></datatable>
 </script>
 
 <script src="/majoingun/js/jquery-2.1.4.min.js"></script>
 <script src='/majoingun/js/ractive.min.js'></script>
-<script src="/majoingun/register/main.js"></script>
 <script src='/majoingun/js/material.min.js'></script>
+<script src='/majoingun/js/datatable.min.js'></script>
+<script src="/majoingun/prospect/main.js"></script>
 
 </body>
 </html>
