--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -100,7 +100,7 @@
             <h6>Gender</h6>
             <div class="snippet-demo">
                 <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="male">
-                    <input class="mdl-radio__button" id="male" name="{{prospect.gender}}" type="radio" value="male">
+                    <input class="mdl-radio__button" id="male" name="{{prospect.gender}}" type="radio" value="male" checked/>
                     <span class="mdl-radio__label">Male</span>
                 </label>
             </div>
