--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -86,11 +86,10 @@
 
     <script id='template' type='text/html'>
         <form on-submit="submit">
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label {{nameMsg ? 'has-error' : ''}}">
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                 <input class="mdl-textfield__input" type="text" pattern="[A-Z,a-z,ก-๙]*" id="firstname"
                        value="{{prospect.firstName}}"/>
                 <label class="mdl-textfield__label" for="firstname">Firstname</label>
-                <span class="validation-message">{{prospect.firstNameMsg}}</span>
             </div>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                 <input class="mdl-textfield__input" type="text" pattern="[A-Z,a-z,ก-๙]*" id="lastname"
