Improve erroe message

--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -90,7 +90,7 @@
                 <input class="mdl-textfield__input" type="text" pattern="[A-Z,a-z,ก-๙]*" id="firstname"
                        value="{{prospect.firstName}}" />
                 <label class="mdl-textfield__label" for="firstname">Firstname</label>
-                <span class="validation-message">{{prospect.firstNameMsg}}</span>
+                <!--<span style="color: red">First name is require</span>-->
             </div>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                 <input class="mdl-textfield__input" type="text" pattern="[A-Z,a-z,ก-๙]*" id="lastname"
