Improve error message

--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -113,7 +113,7 @@
             </div>
 
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <input class="mdl-textfield__input" type="text" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" id="email"
+                <input class="mdl-textfield__input" type="text"  id="email"
                        value="{{prospect.email}}" title="please input valid e-mail address"/>
                 <label class="mdl-textfield__label" for="email">E-mail</label>
             </div>
@@ -150,7 +150,7 @@
                     <span class="mdl-checkbox__label">Software Tester</span>
                 </label>
             </div>
-            <h6>Type</h6>
+            <h6>Register for</h6>
             <div class="snippet-demo">
                 <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="intern">
                     <input class="mdl-radio__button" id="intern" name="{{prospect.type}}" type="radio" value="intern">
