--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -51,7 +51,7 @@
                     <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
                     <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
                         <div class="demo-crumbs mdl-color-text--grey-500">
-                            <h3>Majoingun</h3>
+                            <h3>Registration form</h3>
                             <div id="registerform"></div>
                         </div>
                     </div>
