create mail response template

--- a/src/main/resources/public/register/form.html
+++ b/src/main/resources/public/register/form.html
@@ -104,8 +104,8 @@
                     <input class="mdl-radio__button" id="male" name="{{prospect.gender}}" type="radio" value="male" checked/>
                     <span class="mdl-radio__label">Male</span>
                 </label>
-            </div>
-            <div class="snippet-demo">
+            <!--</div>-->
+            <!--<div class="snippet-demo">-->
                 <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="female">
                     <input class="mdl-radio__button" id="female" name="{{prospect.gender}}" type="radio" value="female">
                     <span class="mdl-radio__label">Female</span>
@@ -156,8 +156,8 @@
                     <input class="mdl-radio__button" id="intern" name="{{prospect.type}}" type="radio" value="intern">
                     <span class="mdl-radio__label">Intern</span>
                 </label>
-            </div>
-            <div class="snippet-demo">
+            <!--</div>-->
+            <!--<div class="snippet-demo">-->
                 <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="permanent">
                     <input class="mdl-radio__button" id="permanent" name="{{prospect.type}}" type="radio" value="permanent">
                     <span class="mdl-radio__label">Permanent</span>
